# source_targets_tests

./: .gitignore  readme.md
autotools/: mylib.pc  readme.md
autotools/app/: Makefile.am  Makefile.include  aclocal.m4  configure  configure.ac
autotools/app/autom4te.cache/: requests
autotools/conan/: conanautotoolsdeps.sh  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps.mk  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
bazel/: readme.md
bazel/app/: BUILD
bazel/mylib/: BUILD
meson/: readme.md
meson/app/: meson.build
msbuild/: MsBuildSourceOnly.sln  readme.md
msbuild/mylib/: mylib.props
premake/: readme.md
premake/app/: conan_mylib.premake5.lua  conan_mylib_vars_release_x86_64.premake5.lua  conandeps.premake5.lua  conanfile.txt  premake5.lua
premake_example/: readme.md
premake_example/app/: HelloWorld.make  Makefile  conan_mylib_vars_release_x86_64.premake5.lua  premake5.lua
